prop-house-webapp/src/components/AuctionHeader/AuctionHeader.module.css
.container {
  background-color: white;
  border: 1px #00000025 solid;
  border-radius: 20px;
  padding: 2rem 2.5rem;
  color: var(--brand-black);
  margin: 1rem 0;
}
.leftSectionContainer {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.leftSectionTitle {
  font-size: 35px;
  font-weight: bold;
}
.leftSectionSubtitle {
  font-size: 20px;
  font-weight: bold;
  color: var(--brand-light-gray);
}

.rightSectionSubsection {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-align: right;
}

.rightSectionTitle {
  font-size: 20px;
  font-weight: bold;
  color: var(--brand-light-gray);
}

.rightSectionSubtitle {
  font-size: 32px !important;
  font-weight: bold;
  white-space: nowrap;
}

.rightSectionSubsection:nth-of-type(2) {
  padding-right: 3rem;
}

.rightSectionSubsection:nth-of-type(3) {
  border-left: 1px solid rgba(0, 0, 0, 0.178);
}

@media only screen and (max-width: 576px) {
  .rightSectionSubsection {
    text-align: left;
  }
  .rightSectionSubsection:nth-of-type(2) {
    margin-top: 1.5rem;
  }
  .rightSectionSubsection:nth-of-type(3) {
    border-left: none;
  }
}

